investigate cases where transduce is faster than inline.