@@ -1,6 +1,6 @@
 @echo off
-:: palisades.lakes (at) gmail (dot) com
-:: 2017-09-09
+:: palisades dot lakes (at) gmail (dot) com
+:: 2017-12-15
 
 ::set GC=-XX:+AggressiveHeap -XX:+UseStringDeduplication 
 set GC=
@@ -12,20 +12,20 @@ set TRACE=
 ::set TRACE=-XX:+PrintGCDetails -XX:+TraceClassUnloading -XX:+TraceClassLoading
 
 ::set PROF=
-::set PROF=-agentlib:hprof=cpu=samples,interval=1,depth=64,thread=n,doe=y
-::set PROF=-agentlib:hprof=cpu=samples,interval=1,depth=128
 set PROF=-agentpath:"C:\Program Files\YourKit Java Profiler 2017.02-b66\bin\win64\yjpagent.dll"
 
 ::set THRUPUT=-d64 -server -XX:+AggressiveOpts 
 set THRUPUT=-d64 -server
 ::set THRUPUT=
 
-::set XMX=-Xms29g -Xmx29g -Xmn11g 
 set XMX=-Xms12g -Xmx12g -Xmn5g 
 
+set OPENS=--add-opens java.base/java.lang=ALL-UNNAMED --add-opens java.base/java.util=ALL-UNNAMED --add-opens java.base/java.util.concurrent.atomic=ALL-UNNAMED
 set CP=-cp ./src/scripts/clojure;lib/*
+
+set JAVA_HOME=%JAVA9%
 set JAVA="%JAVA_HOME%\bin\java"
 
-set CMD=%JAVA% %THRUPUT% -ea -dsa -Xbatch %GC% %PROF% %XMX% %COMPRESSED% %TRACE% %CP% clojure.main %*
+set CMD=%JAVA% %THRUPUT% -ea -dsa -Xbatch %GC% %PROF% %XMX% %COMPRESSED% %TRACE% %OPENS% %CP% clojure.main %*
 ::echo %CMD%
 %CMD%
